force-app/main/default/objects/SM_Payment__c/fields/SM_Authorization_Code__c.field-meta.xml
<CustomField>
    <fullName>SM_Authorization_Code__c</fullName>
    <description>Snapshot de ChargentOrders__Authorization__c de la Transaction asociada (via CH_Historic_Transaction__c), tomado antes de la baja del paquete Chargent.</description>
    <label>Authorization Code Gateway</label>
    <length>255</length>
    <type>Text</type>
</CustomField>