force-app/main/default/objects/SM_Payment__c/fields/SM_Return_code__c.field-meta.xml
<CustomField>
    <fullName>SM_Return_code__c</fullName>
    <label>Return code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>R01</fullName>
                <label>Insufficient Funds</label>
            </value>
            <value>
                <fullName>R02</fullName>
                <label>Account Closed</label>
            </value>
            <value>
                <fullName>R03</fullName>
                <label>No Account/Unable to Locate Account</label>
            </value>
            <value>
                <fullName>R04</fullName>
                <label>Invalid Account Number</label>
            </value>
            <value>
                <fullName>R05</fullName>
                <label>Unauthorized Debit to Consumer Account Using Corporate SEC Code</label>
            </value>
            <value>
                <fullName>R06</fullName>
                <label>Returned per ODFI’s Request</label>
            </value>
            <value>
                <fullName>R07</fullName>
                <label>Authorization Revoked by Customer</label>
            </value>
            <value>
                <fullName>R08</fullName>
                <label>Payment Stopped</label>
            </value>
            <value>
                <fullName>R09</fullName>
                <label>Uncollected Funds</label>
            </value>
            <value>
                <fullName>R10</fullName>
                <label>Customer Advises Not Authorized</label>
            </value>
            <value>
                <fullName>R11</fullName>
                <label>Check Truncation Entry Return</label>
            </value>
            <value>
                <fullName>R12</fullName>
                <label>Account Sold to Another DFI</label>
            </value>
            <value>
                <fullName>R13</fullName>
                <label>Invalid ACH Routing Number</label>
            </value>
            <value>
                <fullName>R14</fullName>
                <label>Representative Payee Deceased or Unable to Continue in that Capacity</label>
            </value>
            <value>
                <fullName>R15</fullName>
                <label>Beneficiary or Account Holder (Other Than a Representative Payee) Deceased</label>
            </value>
            <value>
                <fullName>R16</fullName>
                <label>Account Frozen</label>
            </value>
            <value>
                <fullName>R17</fullName>
                <label>File Record Edit Criteria</label>
            </value>
            <value>
                <fullName>R20</fullName>
                <label>Non-Transaction Account</label>
            </value>
            <value>
                <fullName>R21</fullName>
                <label>Invalid Company Identification</label>
            </value>
            <value>
                <fullName>R22</fullName>
                <label>Invalid Individual ID Number</label>
            </value>
            <value>
                <fullName>R23</fullName>
                <label>Credit Entry Refused by Receiver</label>
            </value>
            <value>
                <fullName>R24</fullName>
                <label>Duplicate Entry</label>
            </value>
            <value>
                <fullName>R29</fullName>
                <label>Corporate Customer Advises Not Authorized</label>
            </value>
            <value>
                <fullName>R31</fullName>
                <label>Permissible Return Entry (CCD and CTX only)</label>
            </value>
            <value>
                <fullName>N01</fullName>
                <label>Unspecified account number.</label>
            </value>
            <value>
                <fullName>N02</fullName>
                <label>Unspecified account routing number.</label>
            </value>
            <value>
                <fullName>N03</fullName>
                <label>Unspecified person account name.</label>
            </value>
            <value>
                <fullName>N04</fullName>
                <label>Unspecified amount.</label>
            </value>
            <value>
                <fullName>N05</fullName>
                <label>The size of the account number field is less than required (17).</label>
            </value>
            <value>
                <fullName>N06</fullName>
                <label>The size of the account routing number field is less than required (8).</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>