force-app/main/default/objects/SM_Payment__c/fields/SM_Transmission_Date_ACH_File__c.field-meta.xml
<CustomField>
    <fullName>SM_Transmission_Date_ACH_File__c</fullName>
    <label>Transmission Date ACH File</label>
    <type>Date</type>
</CustomField>